# binaryninja-api

./: .gitignore  CMakeLists.txt  Cargo.toml  about.toml  architecture.cpp  basedetection.cpp  basicblock.cpp  binaryninjaapi.cpp  binaryninjaapi.h  binaryninjacore.h  binaryview.cpp  binaryviewtype.cpp  callingconvention.cpp  collaboration.cpp  datarenderer.cpp  debuginfo.cpp  filemetadata.cpp  firmwareninja.cpp  function.cpp  highlevelil.cpp  highlevelilinstruction.cpp  highlevelilinstruction.h  http.cpp  linearviewcursor.cpp  log.cpp  lowlevelil.cpp  lowlevelilinstruction.cpp  lowlevelilinstruction.h  mediumlevelilinstruction.cpp  mediumlevelilinstruction.h  mkdocs.yml  platform.cpp  plugin.cpp  pluginmanager.cpp  possiblevalueset.cpp  project.cpp  rapidjsonwrapper.h  renderlayer.cpp  sharedilinstruction.h  transform.cpp  (+7 more)
base/: CMakeLists.txt  assertions.h  unicode.h
cmake/: FindBinaryNinjaCore.cmake  generate_stubs.py
examples/: CMakeLists.txt
json/: json-forwards.h  json.h  jsoncpp.cpp
objectivec/: objc.cpp  objc.h
plugins/idb_import/demo/: Cargo.toml
python/: __init__.py  architecture.py  basedetection.py  binaryview.py  callingconvention.py  commonil.py  compatibility.py  constantrenderer.py  datarender.py  demangle.py  filemetadata.py  flowgraph.py  function.py  generator.cpp  highlevelil.py  interaction.py  languagerepresentation.py  lineardisassembly.py  log.py  lowlevelil.py  mediumlevelil.py  metadata.py  platform.py  plugin.py  pluginmanager.py  project.py  scriptingprovider.py  stringrecognizer.py  transform.py  typearchive.py  typelibrary.py  (+4 more)
(+428 files in other folders)
