[package]
name = "idb_import-static"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]
path = "../src/lib.rs"

[features]
demo = []

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
binaryninja = { workspace = true, features = ["demo"] }
binaryninjacore-sys.workspace = true
idb-rs = { git = "https://github.com/Vector35/idb-rs", tag = "0.1.13" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
